syntax = "proto3";

enum RookEnvironmentProto {
  SANDBOX = 0;
  PRODUCTION = 1;
}

enum DataSourceTypeProto {
  GARMIN = 0;
  OURA = 1;
  POLAR = 2;
  FITBIT = 3;
  WITHINGS = 4;
  WHOOP = 5;
}

message RookConfigurationProto {
  string clientUUID = 1;
  string secretKey = 2;
  RookEnvironmentProto environment = 3;
  bool enableBackgroundSync = 4;
}

message DataSourceProto {
  string name = 1;
  string description = 2;
  string image = 3;
  bool connected = 4;
  string authorizationUrl = 5;
  bool authorizationUrlIsNull = 6;
}

message DataSourcesProtoListWrapper {
  repeated DataSourceProto dataSources = 1;
}

message PluginExceptionProto {
  sint32 id = 1;
  sint32 code = 2;
  string message = 3;
}

message ResultBooleanProto {
  oneof result {
    bool success = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultInt64Proto {
  oneof result {
    int64 value = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultDataSourcesProto {
  oneof result {
    DataSourcesProtoListWrapper dataSourcesProtoListWrapper = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}
